chore: 修改部署脚本

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name overfronted.net;
+    server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -8,17 +9,23 @@ server {
 
     location / {
         return 301 https://$host$request_uri;
-    } 
+    }
 }
+
 server {
     listen 443 ssl;
     server_name overfronted.net;
+    server_tokens off;
+
     ssl_certificate /etc/letsencrypt/live/overfronted.net/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/overfronted.net/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    
+
     location / {
-        proxy_pass http://127.0.0.1:3000
+        proxy_pass  http://overfronted.net;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 }
