--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -23,7 +23,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://overfronted.net;
+        proxy_pass  http://127.0.0.1:3000;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
