--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,33 +3,13 @@ version: '3'
 
 services:
   https-portal:
-    image: steveltn/https-portal:1
+    image: steveltn/https-portal:latest
+    volumes:
+      - ./data/ssl_certs:/var/lib/https-portal
     ports:
-      - '80:80'
-      - '443:443'
-    restart: always
+      - "80:80"
+      - "443:443"
     environment:
       DOMAINS: 'overfronted.net -> http://127.0.0.1:3000'
-      # STAGE: 'production' # Don't use production until staging works
-      # FORCE_RENEW: 'true'
-    volumes: 
-      - https-portal-data:/var/lib/https-portal
-# services:
-#   nginx:
-#     image: nginx:1.15-alpine
-#     restart: unless-stopped
-#     volumes:
-#       - ./data/nginx:/etc/nginx/conf.d
-#       - ./data/certbot/conf:/etc/letsencrypt
-#       - ./data/certbot/www:/var/www/certbot
-#     ports:
-#       - "80:80"
-#       - "443:443"
-#     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-#   certbot:
-#     image: certbot/certbot
-#     restart: unless-stopped
-#     volumes:
-#       - ./data/certbot/conf:/etc/letsencrypt
-#       - ./data/certbot/www:/var/www/certbot
-#     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      # STAGE: production
+      STAGE: staging
