--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,21 @@
 version: '3'
 
 services:
-  https-portal:
-    image: steveltn/https-portal:latest
+  nginx:
+    image: nginx:1.15-alpine
+    restart: unless-stopped
     volumes:
-      - ./data/ssl_certs:/var/lib/https-portal
+      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     ports:
       - "80:80"
       - "443:443"
-    environment:
-      DOMAINS: 'overfronted.net -> http://127.0.0.1:3000'
-      # STAGE: production
-      STAGE: staging
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
