--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "react-dom": "17.0.1",
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.3",
+    "react-toggle": "^4.1.2",
     "remark": "^13.0.0"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
